fix: change margin in network links by correct view on small width screen (Sat 14.12.24 02:01 PM)

--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -94,7 +94,7 @@
             @include flex-row;
             justify-content: center;
             gap: 10vw;
-            margin: 5% auto;
+            margin: max(50px, 5%) auto;
         }
 
         &-link {
